@@ -4,6 +4,7 @@ import de.swiftbyte.gmc.common.entity.GameServerState;
 import de.swiftbyte.gmc.common.model.SettingProfile;
 import de.swiftbyte.gmc.common.packet.from.backend.server.ServerDeletePacket;
 import de.swiftbyte.gmc.daemon.Node;
+import de.swiftbyte.gmc.daemon.service.AutoRestartService;
 import de.swiftbyte.gmc.daemon.service.BackupService;
 import de.swiftbyte.gmc.daemon.service.FirewallService;
 import de.swiftbyte.gmc.daemon.stomp.StompHandler;
@@ -15,11 +16,15 @@ import de.swiftbyte.gmc.daemon.utils.settings.MapSettingsAdapter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
+import org.jetbrains.annotations.NotNull;
 import xyz.astroark.Rcon;
 import xyz.astroark.exception.AuthenticationException;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Scanner;
 
 @Slf4j
@@ -31,29 +36,57 @@ public abstract class ArkServer extends GameServer {
     @Setter
     protected String rconPassword;
 
-    public ArkServer(String id, String friendlyName, SettingProfile settings) {
-        super(id, friendlyName, settings);
+    public ArkServer(String id, @NotNull Path installDir, String friendlyName, SettingProfile settings) {
+        super(id, installDir, friendlyName, settings);
+        // After base init (which may load cached settings), apply backend settings to trigger deltas
+        setSettings(settings);
     }
 
     @Override
     public void setSettings(SettingProfile settings) {
         super.setSettings(settings);
-        writeStartupBatch();
+        // Only write startup batch if install directory exists.
+        // During initial creation, installDir may not exist yet and writing would fail.
+        try {
+            if (installDir != null && Files.exists(installDir)) {
+                writeStartupBatch();
+            } else {
+                log.debug("Skipping startup batch write for '{}' because install directory does not exist yet.", friendlyName);
+            }
+        } catch (Exception e) {
+            log.error("Failed while attempting to write startup batch for '{}' during settings update.", friendlyName, e);
+        }
     }
 
     public AsyncAction<Boolean> install() {
         return () -> {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). Install/update aborted.", friendlyName);
+                return false;
+            }
             setState(GameServerState.CREATING);
 
             MapSettingsAdapter gmcSettings = new MapSettingsAdapter(settings.getGmcSettings());
             boolean isPreaquaticaBeta = gmcSettings.getBoolean("EnablePreaquaticaBeta", false);
 
-            String installCommand = "cmd /c start \"steamcmd\" \"" + CommonUtils.convertPathSeparator(NodeUtils.getSteamCmdPath().toAbsolutePath()) + "\""
-                    + " +force_install_dir \"" + CommonUtils.convertPathSeparator(installDir.toAbsolutePath()) + "\""
-                    + " +login anonymous +app_update " + getGameId() + (isPreaquaticaBeta ? " -beta preaquatica" : "") + " validate +quit";
-            log.debug("Starting server installation with command {}", installCommand);
+            // Ensure install directory exists and is creatable before invoking SteamCMD.
+            // If this fails, signal failure so the caller (creation flow) can delete the server.
             try {
-                Process process = Runtime.getRuntime().exec(installCommand);
+                Files.createDirectories(installDir);
+            } catch (Exception e) {
+                log.error("Failed to create server install directory '{}' for '{}'.", installDir, friendlyName, e);
+                setState(GameServerState.OFFLINE);
+                return false;
+            }
+
+            String steamCmdPath = CommonUtils.convertPathSeparator(NodeUtils.getSteamCmdPath().toAbsolutePath());
+            String installDirectory = CommonUtils.convertPathSeparator(installDir.toAbsolutePath());
+
+            List<String> installCommand = getInstallCommand(steamCmdPath, installDirectory, isPreaquaticaBeta);
+
+            log.debug("Starting server installation with command {}", String.join(" ", installCommand));
+            try {
+                Process process = new ProcessBuilder(installCommand).start();
 
                 Scanner scanner = new Scanner(process.getInputStream());
 
@@ -66,6 +99,16 @@ public abstract class ArkServer extends GameServer {
 
                     allowFirewallPorts();
 
+                    //Create server install dir alias when not already existing
+                    Path aliasPath = this.installDir.getParent().resolve(friendlyName + " - Link");
+                    if (!Files.exists(aliasPath)) {
+                        try {
+                            Files.createSymbolicLink(aliasPath, this.installDir);
+                        } catch (IOException e) {
+                            log.warn("Failed to create symbolic link for '{}'.", friendlyName, e);
+                        }
+                    }
+
                     setState(GameServerState.OFFLINE);
                 } else {
                     log.error("Server installation returned error code {}.", process.exitValue());
@@ -74,20 +117,58 @@ public abstract class ArkServer extends GameServer {
 
             } catch (IOException e) {
                 log.error("An unknown exception occurred while installing the server '{}'.", friendlyName, e);
+                setState(GameServerState.OFFLINE);
                 return false;
             }
             return true;
         };
     }
 
+    private List<String> getInstallCommand(String steamCmdPath, String installDirectory, boolean isPreaquaticaBeta) {
+        List<String> installCommand = new ArrayList<>();
+        installCommand.add("cmd");
+        installCommand.add("/c");
+        installCommand.add("start");
+        installCommand.add("");
+        installCommand.add(steamCmdPath);
+        installCommand.add("+force_install_dir");
+        installCommand.add(installDirectory);
+        installCommand.add("+login");
+        installCommand.add("anonymous");
+        installCommand.add("+app_update");
+        installCommand.add(String.valueOf(getGameId()));
+        if (isPreaquaticaBeta) {
+            installCommand.add("-beta");
+            installCommand.add("preaquatica");
+        }
+        installCommand.add("validate");
+        installCommand.add("+quit");
+        return installCommand;
+    }
+
     @Override
     public AsyncAction<Boolean> delete() {
         return () -> {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). Delete aborted.", friendlyName);
+                return false;
+            }
             try {
                 if (state != GameServerState.OFFLINE && state != GameServerState.CREATING) {
                     stop(false).complete();
                 }
                 super.setState(GameServerState.DELETING);
+
+                AutoRestartService.cancelAutoRestart(serverId);
+                try {
+                    //Delete alias
+                    Path aliasPath = this.installDir.getParent().resolve(friendlyName + " - Link");
+                    Files.delete(aliasPath);
+                } catch (IOException e) {
+                    log.warn("Failed to delete symbolic link for '{}'.", friendlyName, e);
+                }
+
+
                 Thread.sleep(5000);
                 FileUtils.deleteDirectory(installDir.toFile());
                 FirewallService.removePort(friendlyName);
@@ -113,6 +194,7 @@ public abstract class ArkServer extends GameServer {
     @Override
     public AsyncAction<Boolean> abandon() {
         return () -> {
+            AutoRestartService.cancelAutoRestart(serverId);
             GameServer.removeServerById(serverId);
             updateScheduler.cancel(false);
             NodeUtils.cacheInformation(Node.INSTANCE);
@@ -124,6 +206,10 @@ public abstract class ArkServer extends GameServer {
     public AsyncAction<Boolean> start() {
 
         return () -> {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). Start aborted.", friendlyName);
+                return false;
+            }
             ServerUtils.killServerProcess(PID);
 
             super.setState(GameServerState.INITIALIZING);
@@ -138,8 +224,10 @@ public abstract class ArkServer extends GameServer {
                 writeStartupBatch();
                 ServerUtils.writeIniFiles(this, installDir);
                 try {
-                    log.debug("cmd /c start \"{}", CommonUtils.convertPathSeparator(installDir + "/start.bat\""));
-                    serverProcess = Runtime.getRuntime().exec("cmd /c start /min \"" + "\" \"" + CommonUtils.convertPathSeparator(installDir + "/start.bat\""));
+                    String startupScript = CommonUtils.convertPathSeparator(installDir.resolve("start.bat").toString());
+                    List<String> startCommand = List.of("cmd", "/c", "start", "/min", "", startupScript);
+                    log.debug("Starting server with command {}", String.join(" ", startCommand));
+                    serverProcess = new ProcessBuilder(startCommand).start();
                     Scanner scanner = new Scanner(serverProcess.getInputStream());
                     while (scanner.hasNextLine()) {
                     }
@@ -164,6 +252,10 @@ public abstract class ArkServer extends GameServer {
     @Override
     public AsyncAction<Boolean> stop(boolean isRestart, boolean isKill) {
         return () -> {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). Stop aborted.", friendlyName);
+                return false;
+            }
             if (isKill) {
                 log.debug("Killing server '{}'", friendlyName);
                 super.setState(GameServerState.STOPPING);
@@ -180,10 +272,12 @@ public abstract class ArkServer extends GameServer {
             super.setState(GameServerState.STOPPING);
 
             if (!isRestart) {
-                if (!CommonUtils.isNullOrEmpty(Node.INSTANCE.getServerStopMessage())) {
-                    sendRconCommand("serverchat " + Node.INSTANCE.getServerStopMessage());
+                MapSettingsAdapter gmcSettings = new MapSettingsAdapter(settings.getGmcSettings());
+                String stopMessage = gmcSettings.get("StopMessage", null);
+                if (!CommonUtils.isNullOrEmpty(stopMessage)) {
+                    sendRconCommand("serverchat " + stopMessage);
                 } else {
-                    sendRconCommand("serverchat server ist stopping...");
+                    sendRconCommand("serverchat server is stopping...");
                     log.debug("Sending stop message to server '{}'...", friendlyName);
                 }
             }
@@ -210,6 +304,7 @@ public abstract class ArkServer extends GameServer {
                     ServerUtils.killServerProcess(PID);
                 }
                 sendRconCommand("doexit");
+                currentOnlinePlayers = 0;
             }
 
             synchronized (this) {
@@ -227,10 +322,22 @@ public abstract class ArkServer extends GameServer {
     }
 
     public AsyncAction<Boolean> restart() {
-        if (!CommonUtils.isNullOrEmpty(Node.INSTANCE.getServerStopMessage())) {
-            sendRconCommand("serverchat " + Node.INSTANCE.getServerRestartMessage());
-        }
-        return () -> (stop(true).complete() && start().complete());
+        return () -> {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). Restart aborted.", friendlyName);
+                return false;
+            }
+            MapSettingsAdapter gmcSettings = new MapSettingsAdapter(settings.getGmcSettings());
+            String restartMessage = gmcSettings.get("RestartMessage", null);
+            if (!CommonUtils.isNullOrEmpty(restartMessage)) {
+                sendRconCommand("serverchat " + restartMessage);
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException ignored) {
+                }
+            }
+            return (stop(true).complete() && start().complete());
+        };
     }
 
     private int restartCounter = 0;
@@ -302,14 +409,22 @@ public abstract class ArkServer extends GameServer {
     @Override
     public String sendRconCommand(String command) {
         try {
+            if (state == GameServerState.CREATING) {
+                log.warn("Server '{}' is busy (CREATING). RCON '{}' ignored.", friendlyName, command);
+                return null;
+            }
             if (rconPort == 0 || CommonUtils.isNullOrEmpty(rconPassword)) {
                 return null;
             }
             Rcon rcon = new Rcon("127.0.0.1", rconPort, rconPassword.getBytes());
-            return rcon.command(command);
+            String response = rcon.command(command);
+
+            rcon.disconnect();
+
+            return response;
         } catch (IOException e) {
             log.debug("Information: Port: {}, Password: {}", rconPort, rconPassword);
-            log.debug("Can not send rcon command because server '{}' is offline.", friendlyName);
+            log.debug("Can not send rcon command because server '{}' is offline.", friendlyName, e);
             return null;
         } catch (AuthenticationException e) {
             log.debug("Information: Port: {}, Password: {}", rconPort, rconPassword);
